need to use standard set

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-OPENWEATHERMAP_API_KEY=d87770f34c7a0cb418d561fdd3ded23a
+OPENWEATHERMAP_API_KEY="a35f0c612e92762a5f9f081e45cc3c3a"
+# GEOCODING_API_KEY=
